new design and changes in gitignore

--- a/src/app/components/deck-info/deck-info.component.html
+++ b/src/app/components/deck-info/deck-info.component.html
@@ -1,12 +1,7 @@
 <div class="container mt-5">
-    <div class="row bg-secondary p-5 mb-2">
-        <!-- <div class="col-md-2">
-            <div *ngIf="id !== undefined" class="image"
-                [ngStyle]="{'background-image': 'url('+image+')'}">
-            </div>
-        </div> -->
+    <div class="row p-5 mb-2">
         <div class="col-md-12">
-            <h2 class="display-5 title fBold">{{ title }}</h2>
+            <h2 class="display-5 fBold">{{ title }}</h2>
             <p class="description fMedium">{{ description }}</p>
             <p>
                 <small class="text-muted">
