--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,9 +1,9 @@
 <div class="container mt-4">
 
-    <h2 class="display-5 mt-3">
-        <span class="fBold">Busqueda: </span>
+    <h4 class="display-6 mt-3">
+        <span class="fMedium">Busqueda: </span>
         {{ search }}
-    </h2>
+    </h4>
 
     <div class="col-md-12">
         <div class="row" *ngIf="decks.length > 0">
