--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,9 +1,8 @@
 <div class="container mt-5">
     <div class="row d-flex justify-content-center p-4">
-        <div class="col-md-4 card p-4">
-            <h2 class="fBold mb-4 text-center">
+        <div class="col-md-5 card p-4">
+            <h2 class="fMedium mb-4 text-center">
                 <span>Crea tu perfil</span>
-                <img src="assets/images/dinosaurs/044-worker.png" alt="Signup" class="img-fluid dinosaur">
             </h2>
             <form (ngSubmit)="signUp(sendForm)" #sendForm="ngForm">
                 <div class="mb-3">
