--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -11,19 +11,18 @@
     </p>
 </div>
 
-<footer class="mt-5">
+<footer class="mt-5 sticky-bottom">
     <div class="row justify-content-center p-5 w-100">
         <div class="col-md-10">
-            <h2 class="display-3 fBold">FlipMe <span class="display-6 fBold">Cards</span> </h2>
+            <h2 class="display-3 fBold">FlipMe</h2>
             <h4 class="fBold mb-3">ACERCA DE</h4>
-            <p>NOSOTROS</p>
             <p>
                 <a [routerLink]="['/politica-privacidad']">POLITICA DE PRIVACIDAD</a>
             </p>
             <p>
                 <a [routerLink]="['/condiciones-servicio']">CONDICIONES DE USO</a>
             </p>
-            <p class="text-center">Beta Versión 0.0.3 © 2022 FlipMe</p>
+            <p class="text-center">Versión 2.0.0 © 2024 FlipMe</p>
         </div>
     </div>
 </footer>
