--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -1,9 +1,8 @@
 <div class="container mt-5">
     <div class="row d-flex justify-content-center p-4">
-        <div class="col-md-4 card p-4">
-            <h2 class="fBold mb-4 text-center">
+        <div class="col-md-5 card p-4">
+            <h2 class="fMedium mb-4 text-center">
                 <span>Olvide mi contraseña</span>
-                <img src="assets/images/dinosaurs/035-crying.png" alt="Signup" class="dinosaur img-fluid">
             </h2>
             <form (ngSubmit)="recover(sendForm)" #sendForm="ngForm">
                 <div class="mb-3">
