--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,9 +1,8 @@
 <div class="container mt-5">
     <div class="row d-flex justify-content-center p-4">
-        <div class="col-md-4 card p-4">
-            <h2 class="fBold mb-4 text-center">
+        <div class="col-md-5 card p-4">
+            <h2 class="fMedium mb-4 text-center">
                 <span>Iniciar Sesión</span>
-                <img src="assets/images/dinosaurs/022-beauty-1.png" alt="Signup" class="dinosaur img-fluid">
             </h2>
             <form (ngSubmit)="signIn(sendForm)" #sendForm="ngForm">
                 <div class="mb-3">
@@ -15,20 +14,6 @@
                     <input type="password" class="form-control" id="passwordInput" name="password" placeholder="*****" required ngModel>
                 </div>
                 <button type="submit" class="btn btn-success fMedium w-100">Ingresar</button>
-                <!-- <div class="row mt-3">
-                    <div class="col-md-6">
-                        <button class="btn btn-primary w-100 mb-3 fMedium" (click)="signInWithFB()">
-                            <i class="fab fa-facebook-f"></i>
-                            Facebook
-                        </button>
-                    </div>
-                    <div class="col-md-6">
-                        <button class="btn btn-danger w-100 fMedium" (click)="signInWithGoogle()">
-                            <i class="fab fa-google"></i>
-                            Google
-                        </button>
-                    </div>
-                </div> -->
                 <hr>
                 <div class="text-center">
                     <a [routerLink]="['/signup']" class="signup fBold">Quiero crear una cuenta</a>
