--- a/src/app/components/user/cards/general-cards/general-cards.component.css
+++ b/src/app/components/user/cards/general-cards/general-cards.component.css
@@ -5,17 +5,16 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .bg-secondary {
     border-radius: 10px !important;
     background: linear-gradient(rgb(104,246,218), rgb(94,60,187)) !important;
-    color: white !important;
+    color: #212121 !important;
     margin-left: 0px;
     margin-right: 0px;
 }
 
 .display-5 {
-    color: white !important;
+    color: #212121 !important;
 }
