--- a/src/app/components/user/decks/add-deck/add-deck.component.html
+++ b/src/app/components/user/decks/add-deck/add-deck.component.html
@@ -1,9 +1,8 @@
 <div class="container mt-2">
 
     <div class="row d-flex justify-content-center p-3">
-        <div class="col-md-6 card">
+        <div class="col-md-6 card pt-4">
             <h2 class="fBold text-center mb-4">
-                <img src="assets/images/dinosaurs/018-drawing.png" alt="Signup" class="img-fluid dinosaur">
                 <span>Nueva baraja</span>
             </h2>
 
