--- a/src/app/components/user/decks/stats-deck/stats-deck.component.html
+++ b/src/app/components/user/decks/stats-deck/stats-deck.component.html
@@ -1,13 +1,13 @@
 <div class="container mt-5">
-    <div class="row bg-secondary p-5 mb-2">
+    <div class="row mb-2">
         <div class="col-md-12">
-            <h2 class="display-5 title fBold">{{ nameDeck }}</h2>
+            <h2 class="display-5 fBold">{{ nameDeck }}</h2>
             <p class="description fMedium">{{ descriptionDeck }}</p>
         </div>
     </div>
 </div>
 
-<div class="container mt-5">
+<div class="container">
 
     <div class="row d-flex justify-content-between mb-2">
         <div class="col-md-4">
