--- a/src/app/shared/deck/deck.component.css
+++ b/src/app/shared/deck/deck.component.css
@@ -1,7 +1,6 @@
 .deck {
     background-color: white !important;
     border-color: white !important;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     border: 0px !important;
     border-radius: 10px !important;
     margin: 1px !important;
@@ -9,7 +8,6 @@
 }
 
 .btn {
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     border-radius: 5px !important;
 }
 
@@ -20,7 +18,6 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 a {
@@ -28,11 +25,11 @@ a {
 }
 
 .title {
-    color: #09807c !important;
+    color: #1d1d1f !important;
 }
 
 .description {
-    color: #09807c !important;
+    color: #1d1d1f !important;
 }
 
 .deck .nav-link {
