--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -1,15 +1,20 @@
 footer {
-    background-color: #F96D4A !important;
-    color: white !important;
+    border-top: 1px solid #BDBDBD !important;
+    background-color: #f5f5f7;;
 }
 
-.display-3, h4, a {
-    color: white !important;
+.display-3 {
+    color: #00C853 !important;
+    text-decoration: none;
+}
+
+h4, a {
+    color: #212121;
     text-decoration: none;
 }
 
 .cookie {
-    background-color: #61cac5;
+    background-color: #00C853;
     width: 100% !important;
     margin: 0px !important;
     padding: 25px;
