--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -1,18 +1,19 @@
 .navbar {
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    background-color: #3e9491 !important;
-    color: white !important;
+    border-bottom: 1px solid #BDBDBD !important;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    background-color: #f5f5f7;
 }
 
-.navbar-brand, .nav-link {
-    color: white !important;
+.navbar-brand {
+    color: #00C853;
+    font-size: 27px;
 }
 
-.search {
-    border-radius: 10px 0px 0px 10px !important;
-    border: 0px solid transparent !important;
-}
-
-.btn-search {
-    border-radius: 0px 10px 10px 0px !important;
+.btn-outline-success {
+    background-color: transparent;
+    color: #00C853 !important;
+    border: 2px solid #00C853 !important;
+    border-radius: 100px !important;
+    padding: 12px 30px 12px 30px;
 }
