--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,53 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand fBold" href="#">FlipMe Cards</a>
+        <a class="navbar-brand fBold" href="#">FlipMe</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <!-- <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li> -->
             </ul>
             <ul class="navbar-nav mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <form (ngSubmit)="search(sendForm)" #sendForm="ngForm">
-                        <div class="row">
-                            <div class="col-md-9" style="padding-right: 0;">
-                                <input type="text" class="form-control search" name="search" placeholder="Buscar barajas..." ngModel>
-                            </div>
-                            <div class="col-md-3" style="padding-left: 0;">
-                                <button type="submit" class="btn btn-success btn-search fMedium w-100">
-                                    <i class="fas fa-search"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </form>
-                </li>
                 <li class="nav-item" *ngIf="!logged">
-                    <a class="nav-link active fBold" aria-current="page" [routerLink]="['/signin']">Ingresar</a>
+                    <a class="btn btn-outline-success active fBold" aria-current="page" [routerLink]="['/signin']">Ingresar</a>
                 </li>
                 <li class="nav-item dropdown" *ngIf="logged">
                     <a class="nav-link dropdown-toggle fBold" href="#" id="navbarDropdown" role="button"
@@ -65,8 +28,6 @@
                                 Nueva Baraja
                             </a>
                         </li>
-                        <!-- <li><a class="dropdown-item" href="#">Mis Favoritos</a></li>
-                        <li><a class="dropdown-item" href="#">Mis Estadisticas</a></li> -->
                         <li>
                             <a class="dropdown-item" [routerLink]="['/user/configuration']">
                                 Configuración
@@ -82,16 +43,3 @@
         </div>
     </div>
 </nav>
-
-<style>
-    .navbar {
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-        background-color: #3e9491 !important;
-        color: white !important;
-    }
-
-    .navbar-brand,
-    .nav-link {
-        color: white !important;
-    }
-</style>
