--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-    background-color: #fafafa !important;
+    background-color: #f5f5f7 !important;
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     display: flex !important;
@@ -77,34 +77,38 @@ app-footer {
     color: #d7b10a !important;
 }
 
+.title {
+    color: #00C853 !important;
+}
+
 /* BUTTONS STYLES */
 
 .btn {
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-    border-radius: 5px !important;
     border: 0px solid !important;
 }
 
 .btn-success {
-    background-color: #3e9491 !important;
-    border-color: #3e9491 !important;
+    background-color: #00C853 !important;
+    color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.btn-success-add {
+    border-radius: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 .btn-outline-success {
-    border-color: #3e9491 !important;
-    color: #3e9491 !important;
+    border: 2px solid #00C853 !important;
+    color: #00C853 !important;
 }
 
 .btn-outline-success:hover {
-    border-color: #3e9491 !important;
-    background-color: #3e9491 !important;
+    border-color: #00C853 !important;
+    background-color: #00C853 !important;
     color: white !important;
-}
-
-.btn-success,
-.btn-primary,
-.btn-danger {
-    border-radius: 25px !important;
 }
 
 .btn-danger {
@@ -120,13 +124,9 @@ app-footer {
 /* FORM STYLES */
 
 .form-control, .form-select {
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.16), 0 0px 0px rgba(0, 0, 0, 0.23);
-    border: 0px solid !important;
+    border: 2px solid #BDBDBD !important;
+    padding: 8px;
     border-radius: 5px !important;
-}
-
-.form-control:focus, .form-select:focus {
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.16), 0 1px 3px rgba(0, 0, 0, 0.23);
 }
 
 /* TITLE STYLES */
@@ -138,7 +138,6 @@ h2 {
 /* CARD */
 
 .card {
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     border: 0px !important;
     border-radius: 10px !important;
 }
